archived-reference/4.0/PSDesiredStateConfiguration/PSDesiredStateConfiguration.md
---
ms.date:  06/09/2017
schema:  2.0.0
locale:  en-us
keywords:  powershell,cmdlet
Help Version:  4.0.0.2
Download Help Link:  https://go.microsoft.com/fwlink/?LinkId=280237
Module Guid:  ced422f3-86a4-4841-9f80-a713eac9522a
title:  PSDesiredStateConfiguration
Module Name:  PSDesiredStateConfiguration
---
# PSDesiredStateConfiguration Module

## Description

This module contains cmdlets that designed to work with DSC Resources.

## PSDesiredStateConfiguration Cmdlets

### [Get-DscConfiguration](Get-DscConfiguration.md)
Gets the current configuration of the nodes.

### [Get-DscLocalConfigurationManager](Get-DscLocalConfigurationManager.md)
Gets LCM settings and states for the node.

### [Get-DscResource](Get-DscResource.md)
Gets the DSC resources present on the computer.

### [New-DSCCheckSum](New-DSCCheckSum.md)
Creates checksum files for DSC documents and DSC resources.

### [Remove-DscConfigurationDocument](Remove-DscConfigurationDocument.md)
Removes a configuration document from the DSC configuration store.

### [Restore-DscConfiguration](Restore-DscConfiguration.md)
Reapplies the previous configuration for the node.

### [Set-DscLocalConfigurationManager](Set-DscLocalConfigurationManager.md)
Applies LCM settings to nodes.

### [Start-DscConfiguration](Start-DscConfiguration.md)
Applies configuration to nodes.

### [Stop-DscConfiguration](Stop-DscConfiguration.md)
Stops a running configuration.

### [Test-DscConfiguration](Test-DscConfiguration.md)
Tests whether the actual configuration on the nodes matches the desired configuration.

### [Update-DscConfiguration](Update-DscConfiguration.md)
Checks the pull server for an updated configuration and applies it.
