archived-reference/5.0/PSDesiredStateConfiguration/PSDesiredStateConfiguration.md
---
ms.date:  06/09/2017
schema:  2.0.0
locale:  en-us
keywords:  powershell,cmdlet
Help Version:  5.0.5.2
Download Help Link:  https://go.microsoft.com/fwlink/?LinkId=390814
Module Guid:  94b905ff-74b5-437e-89ed-7df44386533c
title:  PSDesiredStateConfiguration
Module Name:  PSDesiredStateConfiguration
---
# PSDesiredStateConfiguration Module

## Description

This module contains cmdlets that designed to work with DSC Resources.

## PSDesiredStateConfiguration Cmdlets

### [Disable-DscDebug](Disable-DscDebug.md)
Stops debugging of DSC resources.

### [Enable-DscDebug](Enable-DscDebug.md)
Starts debugging of all DSC resources.

### [Find-DscResource](Find-DscResource.md)
Finds DSC resources that match the specified criteria.

### [Get-DscConfiguration](Get-DscConfiguration.md)
Gets the current configuration of the nodes.

### [Get-DscConfigurationStatus](Get-DscConfigurationStatus.md)
Retrieves data about completed configuration runs.

### [Get-DscLocalConfigurationManager](Get-DscLocalConfigurationManager.md)
Gets LCM settings and states for the node.

### [Get-DscResource](Get-DscResource.md)
Gets the DSC resources present on the computer.

### [Invoke-DscResource](Invoke-DscResource.md)
Runs a method of a specified DSC resource.

### [New-DSCCheckSum](New-DSCCheckSum.md)
Creates checksum files for DSC documents and DSC resources.

### [Publish-DscConfiguration](Publish-DscConfiguration.md)
Publishes a DSC configuration to a set of computers.

### [Remove-DscConfigurationDocument](Remove-DscConfigurationDocument.md)
Removes a configuration document from the DSC configuration store.

### [Restore-DscConfiguration](Restore-DscConfiguration.md)
Reapplies the previous configuration for the node.

### [Set-DscLocalConfigurationManager](Set-DscLocalConfigurationManager.md)
Applies LCM settings to nodes.

### [Start-DscConfiguration](Start-DscConfiguration.md)
Applies configuration to nodes.

### [Stop-DscConfiguration](Stop-DscConfiguration.md)
Stops a running configuration.

### [Test-DscConfiguration](Test-DscConfiguration.md)
Tests whether the actual configuration on the nodes matches the desired configuration.

### [Update-DscConfiguration](Update-DscConfiguration.md)
Checks the pull server for an updated configuration and applies it.
